--- a/Source/Project64/Project64.vcxproj
+++ b/Source/Project64/Project64.vcxproj
@@ -51,10 +51,7 @@
   <PropertyGroup>
     <GenerateManifest>false</GenerateManifest>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='RA-Debug|Win32'">
-    <TargetName>RA$(ProjectName)</TargetName>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='RA-Release|Win32'">
+  <PropertyGroup Condition="'$(Configuration.Substring(0,3))'=='RA-'">
     <TargetName>RA$(ProjectName)</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup>
@@ -65,6 +62,7 @@
       <StackReserveSize>1</StackReserveSize>
       <DataExecutionPrevention>false</DataExecutionPrevention>
       <LargeAddressAware>true</LargeAddressAware>
+      <AdditionalDependencies Condition="'$(Configuration.Substring(0,3))'=='RA-'">winhttp.lib;%(AdditionalDependencies);$(DelayImplib)</AdditionalDependencies>
     </Link>
     <Manifest Condition="'$(PlatformToolset)'!='v90'">
       <EnableDPIAwareness>true</EnableDPIAwareness>
@@ -72,14 +70,17 @@
     <PreBuildEvent>
       <Command>IF NOT EXIST "$(SolutionDir)Config\Project64.cfg" (copy  "$(SolutionDir)Config\Project64.cfg.development" "$(SolutionDir)Config\Project64.cfg")</Command>
     </PreBuildEvent>
+    <PreBuildEvent Condition="'$(Configuration.Substring(0,3))'=='RA-'">
+      <Command>IF NOT EXIST "$(SolutionDir)Config\Project64.cfg" (copy  "$(SolutionDir)Config\Project64.cfg.development" "$(SolutionDir)Config\Project64.cfg")
+$(ProjectDir)..\..\RAInterface\MakeBuildVer.bat $(ProjectDir)RA_BuildVer.h RAProject64 RAPROJECT64</Command>
+    </PreBuildEvent>
     <ClCompile>
       <AdditionalIncludeDirectories>$(SolutionDir)Source\3rdParty\asmjit\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='RA-Debug|Win32'">RETROACHIEVEMENTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='RA-Release|Win32'">RETROACHIEVEMENTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions Condition="'$(Configuration.Substring(0,3))'=='RA-'">RETROACHIEVEMENTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <PostBuildEvent>
       <Command Condition="'$(Configuration)'=='Release'">"$(SolutionDir)\Source\Script\clang.cmd" check</Command>
-      <Command Condition="'$(Configuration)'=='RA-Release'">"$(SolutionDir)\Source\Script\clang.cmd" check</Command>
+      <Command Condition="'$(Configuration.Substring(0,3))'=='RA-'">$(ProjectDir)..\..\RAInterface\CopyOverlay.bat $(TargetDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
